--- a/travis.yml
+++ b/travis.yml
@@ -91,8 +91,8 @@ before_deploy:
 deploy:
   skip_cleanup: true
   provider: script
-  on:
-      branch: master
+  # on:
+  #     branch: master
   script: bash deploy_script.sh
 
 after_deploy:
