--- a/travis.yml
+++ b/travis.yml
@@ -15,47 +15,47 @@ services:
   - docker
   
 env:
-  # - CONDA_RECIPE=gitflow
-  # - CONDA_RECIPE=vcs
-  # - CONDA_RECIPE=python-scons
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=python-scons
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=gitflow
+  - CONDA_RECIPE=vcs
+  - CONDA_RECIPE=python-scons
+    CONDA_VERSION=2
+  - CONDA_RECIPE=python-scons
+    CONDA_VERSION=3
   - CONDA_RECIPE=scons-tools
     CONDA_VERSION=2
   - CONDA_RECIPE=scons-tools
     CONDA_VERSION=3
-  # - CONDA_RECIPE=python-parse
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=python-parse
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=libtoolchain
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=libtoolchain
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=libruntime
-  # - CONDA_RECIPE=python-toolchain
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=python-toolchain
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=llvm
-  # - CONDA_RECIPE=clang
-  # - CONDA_RECIPE=python-clang
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=libboost
-  #   CONDA_VERSION=2
-  #   TRAVIS_WAIT=40
-  # - CONDA_RECIPE=libboost
-  #   CONDA_VERSION=3
-  #   TRAVIS_WAIT=40
-  # - CONDA_RECIPE=statiskit-toolchain
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=statiskit-toolchain
-  #   CONDA_VERSION=3
-  # - DOCKERFILE=ubuntu
-  #   CONDA_VERSION=2
-  # - DOCKERFILE=ubuntu
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=python-parse
+    CONDA_VERSION=2
+  - CONDA_RECIPE=python-parse
+    CONDA_VERSION=3
+  - CONDA_RECIPE=libtoolchain
+    CONDA_VERSION=2
+  - CONDA_RECIPE=libtoolchain
+    CONDA_VERSION=3
+  - CONDA_RECIPE=libruntime
+  - CONDA_RECIPE=python-toolchain
+    CONDA_VERSION=2
+  - CONDA_RECIPE=python-toolchain
+    CONDA_VERSION=3
+  - CONDA_RECIPE=llvm
+  - CONDA_RECIPE=clang
+  - CONDA_RECIPE=python-clang
+    CONDA_VERSION=2
+  - CONDA_RECIPE=libboost
+    CONDA_VERSION=2
+    TRAVIS_WAIT=40
+  - CONDA_RECIPE=libboost
+    CONDA_VERSION=3
+    TRAVIS_WAIT=40
+  - CONDA_RECIPE=statiskit-toolchain
+    CONDA_VERSION=2
+  - CONDA_RECIPE=statiskit-toolchain
+    CONDA_VERSION=3
+  - DOCKERFILE=ubuntu
+    CONDA_VERSION=2
+  - DOCKERFILE=ubuntu
+    CONDA_VERSION=3
 
 matrix:
   exclude:
