--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,40 +10,76 @@ platform:
 
 environment:
   matrix:
-    # - CONDA_RECIPE: gitflow
-    # - CONDA_RECIPE: vcs
-    # - CONDA_RECIPE: python-scons
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: python-scons
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: scons-tools
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: scons-tools
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: python-parse
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: python-parse
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: libtoolchain
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: libtoolchain
-    #   CONDA_VERSION: 3
-    - CONDA_RECIPE: libruntime
-    # - CONDA_RECIPE: python-toolchain
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: python-toolchain
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: llvm
-    # - CONDA_RECIPE: clang
-    # - CONDA_RECIPE: python-clang
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: libboost
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: libboost
-    #   CONDA_VERSION: 3
-    - CONDA_RECIPE: statiskit-toolchain
+    - CONDA_RECIPE: bin\conda\gitflow
+    - CONDA_RECIPE: bin\conda\vcs
+    - CONDA_RECIPE: bin\conda\python-scons
       CONDA_VERSION: 2
-    - CONDA_RECIPE: statiskit-toolchain
+    - CONDA_RECIPE: bin\conda\python-scons
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\scons-tools
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\scons-tools
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\python-parse
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\python-parse
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\libtoolchain
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\libtoolchain
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\libruntime
+    - CONDA_RECIPE: bin\conda\python-toolchain
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\python-toolchain
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\llvm
+    - CONDA_RECIPE: bin\conda\clang
+    - CONDA_RECIPE: bin\conda\python-clang
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\libboost
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\libboost
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: git\share\ClangLite\bin\conda\libclanglite
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: git\share\ClangLite\bin\conda\libclanglite
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: git\share\ClangLite\bin\conda\python-clanglite
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: git\share\ClangLite\bin\conda\python-clanglite
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: git\share\AutoWIG\bin\conda\python-autowig
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: git\share\AutoWIG\bin\conda\python-autowig
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\statiskit-toolchain
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\statiskit-toolchain
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: git\share\STL\bin\conda\libstatiskit_stl
+    - CONDA_RECIPE: git\share\STL\bin\conda\python-statiskit_stl
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: git\share\STL\bin\conda\python-statiskit_stl
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: git\share\LinAlg\bin\conda\libstatiskit_linalg
+    - CONDA_RECIPE: git\share\LinAlg\bin\conda\python-statiskit_linalg
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: git\share\LinAlg\bin\conda\python-statiskit_linalg
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: git\share\LinAlg\bin\conda\libstatiskit_core
+    - CONDA_RECIPE: git\share\LinAlg\bin\conda\python-statiskit_core
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: git\share\LinAlg\bin\conda\python-statiskit_core
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\libstatiskit
+    - CONDA_RECIPE: bin\conda\python-statiskit
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\python-statiskit
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\statiskit-dev
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\statiskit-dev
       CONDA_VERSION: 3
 
 install:
