--- a/bin/conda/python-statiskit/meta.yaml
+++ b/bin/conda/python-statiskit/meta.yaml
@@ -1,5 +1,5 @@
 package:
-  name: python-statiskit_all
+  name: python-statiskit
   version: 1.0.0
 
 build:
@@ -8,12 +8,13 @@ build:
 about:
   home: http://statiskit.rtfd.io/
   license: Apache License 2.0
-  summary: The Python package collection of the StatisKit software suite.
+  summary: The Python API of the StatisKit software suite.
   
 requirements:
+  build:
+    - python
   run:
+    - python
     - python-statiskit_stl
     - python-statiskit_linalg
     - python-statiskit_core
-    - python-statiskit_glm
-    - python-statiskit_pgm
