--- a/bin/conda/libtoolchain/meta.yaml
+++ b/bin/conda/libtoolchain/meta.yaml
@@ -5,9 +5,6 @@ package:
 build:
   number: 0
   track_features:
-    # - vc9                 [win and py27]
-    # - vc10                [win and py34]
-    # - vc14                [win and py35]
     - vc14                 [win]
 
 about:
@@ -19,16 +16,18 @@ requirements:
   build:
     - python
     - scons-tools
+    - gcc_linux-64        [linux]
+    - gxx_linux-64        [linux]
+    - clang_osx-64        [osx]
+    - clangxx_osx-64      [osx]
     - pywin32             [win]
-    # - vs2008_runtime      [win and py27]
-    # - vs2010_runtime      [win and py34]
-    # - vs2015_runtime      [win and py35]
     - vs2015_runtime      [win]
   run:
     - python
     - scons-tools
+    - gcc_linux-64        [linux]
+    - gxx_linux-64        [linux]
+    - clang_osx-64        [osx]
+    - clangxx_osx-64      [osx]
     - pywin32             [win]
-    # - vs2008_runtime      [win and py27]
-    # - vs2010_runtime      [win and py34]
-    # - vs2015_runtime      [win and py35]
     - vs2015_runtime      [win]
