--- a/bin/conda/libtoolchain/meta.yaml
+++ b/bin/conda/libtoolchain/meta.yaml
@@ -18,8 +18,10 @@ requirements:
     - scons-tools
     - gcc_linux-64        [linux]
     - gxx_linux-64        [linux]
+    - gfortran_linux-64   [linux]
     - clang_osx-64        [osx]
     - clangxx_osx-64      [osx]
+    - gfortran_osx-64     [osx]
     - pywin32             [win]
     - vs2015_runtime      [win]
   run:
