--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,6 @@ platform:
 
 environment:
   matrix:
-    - CONDA_RECIPE: bin\conda\gitflow
     - CONDA_RECIPE: bin\conda\vcs
     - CONDA_RECIPE: bin\conda\python-scons
       CONDA_VERSION: 2
@@ -33,14 +32,14 @@ environment:
       CONDA_VERSION: 2
     - CONDA_RECIPE: bin\conda\python-toolchain
       CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\llvm
-    - CONDA_RECIPE: bin\conda\clang
-    - CONDA_RECIPE: bin\conda\python-clang
-      CONDA_VERSION: 2
     - CONDA_RECIPE: bin\conda\libboost
       CONDA_VERSION: 2
     - CONDA_RECIPE: bin\conda\libboost
       CONDA_VERSION: 3
+    - CONDA_RECIPE: share\git\ClangLite\bin\conda\llvm
+    - CONDA_RECIPE: share\git\ClangLite\bin\conda\clang
+    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
+      CONDA_VERSION: 2
     - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
       CONDA_VERSION: 2
     - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
