--- a/travis.yml
+++ b/travis.yml
@@ -7,7 +7,7 @@ language: cpp
 
 os:
   - linux
-  # - osx
+  - osx
 
 sudo: required
 
@@ -15,83 +15,82 @@ services:
   - docker
   
 env:
-  # - CONDA_RECIPE=bin/conda/gitflow
-  # - CONDA_RECIPE=bin/conda/vcs
-  # - CONDA_RECIPE=bin/conda/python-scons
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/python-scons
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/scons-tools
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/scons-tools
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/python-parse
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/python-parse
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/libtoolchain
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/libtoolchain
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/libruntime
-  # - CONDA_RECIPE=bin/conda/python-toolchain
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/python-toolchain
-  #   CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/llvm
-  # - CONDA_RECIPE=bin/conda/clang
-  # - CONDA_RECIPE=bin/conda/python-clang
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/libboost
-  #   CONDA_VERSION=2
-  #   TRAVIS_WAIT=40
-  # - CONDA_RECIPE=bin/conda/libboost
-  #   CONDA_VERSION=3
-  #   TRAVIS_WAIT=40
-  # - CONDA_RECIPE=git/share/ClangLite/bin/conda/libclanglite
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=git/share/ClangLite/bin/conda/libclanglite
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=git/share/ClangLite/bin/conda/python-clanglite
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=git/share/ClangLite/bin/conda/python-clanglite
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=git/share/AutoWIG/bin/conda/python-autowig
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=git/share/AutoWIG/bin/conda/python-autowig
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/statiskit-toolchain
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/statiskit-toolchain
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=git/share/STL/bin/conda/libstatiskit_stl
-  # - CONDA_RECIPE=git/share/STL/bin/conda/python-statiskit_stl
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=git/share/STL/bin/conda/python-statiskit_stl
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=git/share/LinAlg/bin/conda/libstatiskit_linalg
-  # - CONDA_RECIPE=git/share/LinAlg/bin/conda/python-statiskit_linalg
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=git/share/LinAlg/bin/conda/python-statiskit_linalg
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=git/share/LinAlg/bin/conda/libstatiskit_core
-  # - CONDA_RECIPE=git/share/LinAlg/bin/conda/python-statiskit_core
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=git/share/LinAlg/bin/conda/python-statiskit_core
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/libstatiskit
-  # - CONDA_RECIPE=bin/conda/python-statiskit
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/python-statiskit
-  #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/statiskit-dev
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/statiskit-dev
-  #   CONDA_VERSION=3
-  # - DOCKERFILE=bin/docker/ubuntu
-  #   CONDA_VERSION=2
-  # - DOCKERFILE=bin/docker/ubuntu
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/vcs
+  - CONDA_RECIPE=bin/conda/python-scons
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/python-scons
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/scons-tools
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/scons-tools
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/python-parse
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/python-parse
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/libtoolchain
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/libtoolchain
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/libruntime
+  - CONDA_RECIPE=bin/conda/python-toolchain
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/python-toolchain
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/libboost
+    CONDA_VERSION=2
+    TRAVIS_WAIT=40
+  - CONDA_RECIPE=bin/conda/libboost
+    CONDA_VERSION=3
+    TRAVIS_WAIT=40
+  - CONDA_RECIPE=git/share/ClangLite/bin/conda/llvm
+  - CONDA_RECIPE=git/share/ClangLite/bin/conda/clang
+  - CONDA_RECIPE=git/share/ClangLite/bin/conda/python-clang
+    CONDA_VERSION=2
+  - CONDA_RECIPE=git/share/ClangLite/bin/conda/libclanglite
+    CONDA_VERSION=2
+  - CONDA_RECIPE=git/share/ClangLite/bin/conda/libclanglite
+    CONDA_VERSION=3
+  - CONDA_RECIPE=git/share/ClangLite/bin/conda/python-clanglite
+    CONDA_VERSION=2
+  - CONDA_RECIPE=git/share/ClangLite/bin/conda/python-clanglite
+    CONDA_VERSION=3
+  - CONDA_RECIPE=git/share/AutoWIG/bin/conda/python-autowig
+    CONDA_VERSION=2
+  - CONDA_RECIPE=git/share/AutoWIG/bin/conda/python-autowig
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/statiskit-toolchain
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/statiskit-toolchain
+    CONDA_VERSION=3
+  - CONDA_RECIPE=git/share/STL/bin/conda/libstatiskit_stl
+  - CONDA_RECIPE=git/share/STL/bin/conda/python-statiskit_stl
+    CONDA_VERSION=2
+  - CONDA_RECIPE=git/share/STL/bin/conda/python-statiskit_stl
+    CONDA_VERSION=3
+  - CONDA_RECIPE=git/share/LinAlg/bin/conda/libstatiskit_linalg
+  - CONDA_RECIPE=git/share/LinAlg/bin/conda/python-statiskit_linalg
+    CONDA_VERSION=2
+  - CONDA_RECIPE=git/share/LinAlg/bin/conda/python-statiskit_linalg
+    CONDA_VERSION=3
+  - CONDA_RECIPE=git/share/LinAlg/bin/conda/libstatiskit_core
+  - CONDA_RECIPE=git/share/LinAlg/bin/conda/python-statiskit_core
+    CONDA_VERSION=2
+  - CONDA_RECIPE=git/share/LinAlg/bin/conda/python-statiskit_core
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/libstatiskit
+  - CONDA_RECIPE=bin/conda/python-statiskit
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/python-statiskit
+    CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/statiskit-dev
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/statiskit-dev
+    CONDA_VERSION=3
+  - DOCKERFILE=bin/docker/ubuntu
+    CONDA_VERSION=2
+  - DOCKERFILE=bin/docker/ubuntu
+    CONDA_VERSION=3
 
 matrix:
   exclude:
