--- a/travis.yml
+++ b/travis.yml
@@ -20,10 +20,10 @@ env:
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=bin/conda/python-scons
   #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/scons-tools
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/scons-tools
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/scons-tools
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/scons-tools
+    CONDA_VERSION=3
   # - CONDA_RECIPE=bin/conda/python-parse
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=bin/conda/python-parse
@@ -37,12 +37,12 @@ env:
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=bin/conda/python-toolchain
   #   CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/libboost
-    CONDA_VERSION=2
-    TRAVIS_WAIT=40
-  - CONDA_RECIPE=bin/conda/libboost
-    CONDA_VERSION=3
-    TRAVIS_WAIT=40
+  # - CONDA_RECIPE=bin/conda/libboost
+  #   CONDA_VERSION=2
+  #   TRAVIS_WAIT=40
+  # - CONDA_RECIPE=bin/conda/libboost
+  #   CONDA_VERSION=3
+  #   TRAVIS_WAIT=40
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clang
