--- a/travis.yml
+++ b/travis.yml
@@ -38,34 +38,34 @@ services:
   - docker
   
 env:
-  - CONDA_RECIPE=bin/conda/vcs
-  - CONDA_RECIPE=bin/conda/python-scons
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-scons
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/vcs
+  # - CONDA_RECIPE=bin/conda/python-scons
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-scons
+  #   CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/scons-tools
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/scons-tools
     CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/python-parse
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-parse
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/libtoolchain
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/libtoolchain
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/libruntime
-  - CONDA_RECIPE=bin/conda/python-toolchain
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-toolchain
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/libboost
-    CONDA_VERSION=2
-    TRAVIS_WAIT=40
-  - CONDA_RECIPE=bin/conda/libboost
-    CONDA_VERSION=3
-    TRAVIS_WAIT=40
+  # - CONDA_RECIPE=bin/conda/python-parse
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-parse
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/libtoolchain
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/libtoolchain
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/libruntime
+  # - CONDA_RECIPE=bin/conda/python-toolchain
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-toolchain
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/libboost
+  #   CONDA_VERSION=2
+  #   TRAVIS_WAIT=40
+  # - CONDA_RECIPE=bin/conda/libboost
+  #   CONDA_VERSION=3
+  #   TRAVIS_WAIT=40
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clang
