--- a/travis.yml
+++ b/travis.yml
@@ -29,7 +29,7 @@ branches:
 language: cpp
 
 os:
-  - linux
+  # - linux
   - osx
 
 sudo: required
@@ -52,6 +52,7 @@ env:
   # - CONDA_RECIPE=bin/conda/python-parse
   #   CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/llvm-suite
+  - CONDA_RECIPE=bin/conda/clang
   - CONDA_RECIPE=bin/conda/libtoolchain
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/libtoolchain
@@ -126,7 +127,9 @@ matrix:
            CONDA_VERSION=3
     - os: linux
       env: CONDA_RECIPE=bin/conda/llvm-suite
-      
+    - os: linux
+      env: CONDA_RECIPE=bin/conda/clang
+
 install:
   - git clone https://github.com/StatisKit/travis-ci.git
   - cd travis-ci
