--- a/bin/conda/llvm-suite/meta.yaml
+++ b/bin/conda/llvm-suite/meta.yaml
@@ -155,17 +155,6 @@ source:
     sha256: {{ macosx_109_sdk_sha256 }}
     folder: bootstrap/MacOSX10.9.sdk
 
-build:
-  number: 0
-  skip: true [not osx]
-
-test:
-  commands:
-  - llvm-config --libs
-  - llc -version
-  - clang++ -x c++ -v -E /dev/null
-  - clang -x c -v -E /dev/null
-
 requirements:
   build:
     # we use selectors rather than jinja2 here because we only want to use the native
@@ -183,7 +172,7 @@ requirements:
     # macOS has its own uuid library. It includes uuid_string_t which llvm uses.
     - libuuid  # [not osx]
     # ld64 needs this.
-    - xar
+    # - xar
     # We only use the static library from this and only get away with that as it depends on nothing.
     - zlib
 
