--- a/bin/conda/libtoolchain/meta.yaml
+++ b/bin/conda/libtoolchain/meta.yaml
@@ -42,6 +42,7 @@ requirements:
     - gcc_linux-64        [linux]
     - gxx_linux-64        [linux]
     - gfortran_linux-64   [linux]
+    - glibc               [linux]
     - clang_osx-64        [osx]
     - clangxx_osx-64      [osx]
     - gfortran_osx-64     [osx]
@@ -53,6 +54,7 @@ requirements:
     - gcc_linux-64        [linux]
     - gxx_linux-64        [linux]
     - gfortran_linux-64   [linux]
+    - glibc               [linux]
     - clang_osx-64        [osx]
     - clangxx_osx-64      [osx]
     - gfortran_osx-64     [osx]
