--- a/bin/conda/libtoolchain/meta.yaml
+++ b/bin/conda/libtoolchain/meta.yaml
@@ -28,7 +28,8 @@ package:
 build:
   number: 0
   track_features:
-    - vc14                 [win]
+    - vc12                 [win]
+    # - vc14                 [win]
 
 about:
   home: http://statiskit.rtfd.io/
@@ -36,27 +37,21 @@ about:
   summary: Collection of utilities for compiling libraries.
   
 requirements:
-  build:
-    - python
-    - scons-tools
-    - gcc_linux-64        [linux]
-    - gxx_linux-64        [linux]
-    - gfortran_linux-64   [linux]
-    - glibc               [linux]
-    - clang_osx-64        [osx]
-    - clangxx_osx-64      [osx]
-    - gfortran_osx-64     [osx]
-    - pywin32             [win]
-    - vs2015_runtime      [win]
   run:
     - python
+    - python-scons
     - scons-tools
     - gcc_linux-64        [linux]
     - gxx_linux-64        [linux]
     - gfortran_linux-64   [linux]
-    - glibc               [linux]
+    # - glibc               [linux]
     - clang_osx-64        [osx]
     - clangxx_osx-64      [osx]
     - gfortran_osx-64     [osx]
     - pywin32             [win]
-    - vs2015_runtime      [win]
+    # - vs2015_runtime      [win]
+    # - vs2013_runtime      [win]
+  run_exports:
+    - pywin32             [win]
+    # - vs2015_runtime      [win]
+    - vs2013_runtime      [win]
