--- a/travis.yml
+++ b/travis.yml
@@ -131,7 +131,7 @@ deploy:
   skip_cleanup: true
   provider: script
   on:
-      branch: master
+      all_branches: true
   script: bash deploy_script.sh
 
 after_deploy:
