--- a/travis.yml
+++ b/travis.yml
@@ -29,7 +29,7 @@ branches:
 language: cpp
 
 os:
-  - linux
+  # - linux
   - osx
 
 sudo: required
@@ -38,19 +38,19 @@ services:
   - docker
   
 env:
-  - CONDA_RECIPE=bin/conda/vcs
-  - CONDA_RECIPE=bin/conda/python-scons
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-scons
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/scons-tools
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/scons-tools
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/python-parse
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-parse
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/vcs
+  # - CONDA_RECIPE=bin/conda/python-scons
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-scons
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/scons-tools
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/scons-tools
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/python-parse
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-parse
+  #   CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/llvm-suite
   # - CONDA_RECIPE=bin/conda/glibc
   - CONDA_RECIPE=bin/conda/libtoolchain
@@ -112,7 +112,10 @@ matrix:
     - os: linux
       env: DOCKER_CONTEXT=bin/docker/ubuntu
            CONDA_VERSION=3
-
+    - os: osx
+      env: CONDA_RECIPE=bin/conda/boost-suite
+           CONDA_VERSION=2
+           TRAVIS_WAIT=50
 install:
   - git clone https://github.com/StatisKit/travis-ci.git
   - cd travis-ci
