--- a/bin/conda/boost-suite/meta.yaml
+++ b/bin/conda/boost-suite/meta.yaml
@@ -126,6 +126,8 @@ outputs:
         - {{ pin_subpackage('libboost_core-dev', exact=True) }}
       run_exports:
         - {{ pin_subpackage('libboost_python', exact=True) }}
+        - {{ pin_subpackage('libboost_container-dev', exact=True) }}
+
     # test:
     #   script: run_test.py
   - files:
