--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,10 +56,10 @@ environment:
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: bin\conda\python-toolchain
     #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: bin\conda\boost-suite
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: bin\conda\boost-suite
-    #   CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\boost-suite
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\boost-suite
+      CONDA_VERSION: 3
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\llvm
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\clang
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
