--- a/bin/conda/boost-suite/meta.yaml
+++ b/bin/conda/boost-suite/meta.yaml
@@ -56,6 +56,7 @@ outputs:
   - files:
       - lib/libboost_atomic*     [not win]
       - Library\lib\libboost_atomic* [win]
+      - Library\bin\libboost_atomic* [win]
     name: libboost_atomic
   - files:
       - include/boost/atomic.hpp       [not win]
@@ -75,6 +76,7 @@ outputs:
   - files:
       - lib/libboost_chrono*     [not win]
       - Library\lib\libboost_chrono* [win]
+      - Library\bin\libboost_chrono* [win]
     name: libboost_chrono
     requirements:
       run:
@@ -96,6 +98,7 @@ outputs:
   - files:
       - lib/libboost_container*     [not win]
       - Library\lib\libboost_container* [win]
+      - Library\bin\libboost_container* [win]
     name: libboost_container
   - files:
       - include/boost/container          [not win]
@@ -111,6 +114,7 @@ outputs:
   - files:
       - lib/libboost_python*     [not win]
       - Library\lib\libboost_python* [win]
+      - Library\bin\libboost_python* [win]
     name: libboost_python
     requirements:
       - python
@@ -133,6 +137,7 @@ outputs:
   - files:
       - lib/libboost_context*     [not win]
       - Library\lib\libboost_context* [win]
+      - Library\bin\libboost_context* [win]
     name: libboost_context
   - files:
       - include/boost/context          [not win]
@@ -148,6 +153,7 @@ outputs:
   - files:
       - lib/libboost_coroutine*     [not win]
       - Library\lib\libboost_coroutine* [win]
+      - Library\bin\libboost_coroutine* [win]
     name: libboost_coroutine
     requirements:
       run:
@@ -173,6 +179,7 @@ outputs:
   - files:
       - lib/libboost_date_time*     [not win]
       - Library\lib\libboost_date_time* [win]
+      - Library\bin\libboost_date_time* [win]
     name: libboost_date_time
   - files:
       - include/boost/date_time.hpp      [not win]
@@ -190,6 +197,7 @@ outputs:
   - files:
       - lib/libboost_filesystem*     [not win]
       - Library\lib\libboost_filesystem* [win]
+      - Library\bin\libboost_filesystem* [win]
     name: libboost_filesystem
     requirements:
       run:
@@ -211,6 +219,7 @@ outputs:
   - files:
       - lib/libboost_graph*     [not win]
       - Library\lib\libboost_graph* [win]
+      - Library\bin\libboost_graph* [win]
     name: libboost_graph
     requirements:
       run:
@@ -232,6 +241,7 @@ outputs:
   - files:
       - lib/libboost_iostreams*     [not win]
       - Library\lib\libboost_iostreams* [win]
+      - Library\bin\libboost_iostreams* [win]
     name: libboost_iostreams
   - files:
       - include/boost/iostreams          [not win]
@@ -247,6 +257,7 @@ outputs:
   - files:
       - lib/libboost_locale*     [not win]
       - Library\lib\libboost_locale* [win]
+      - Library\bin\libboost_locale* [win]
     name: libboost_locale
     requirements:
       run:
@@ -270,6 +281,7 @@ outputs:
   - files:
       - lib/libboost_log*     [not win]
       - Library\lib\libboost_log* [win]
+      - Library\bin\libboost_log* [win]
     name: libboost_log
     requirements:
       run:
@@ -295,6 +307,7 @@ outputs:
   - files:
       - lib/libboost_math*     [not win]
       - Library\lib\libboost_math* [win]
+      - Library\bin\libboost_math* [win]
     name: libboost_math
   - files:
       - include/boost/math              [not win]
@@ -314,6 +327,7 @@ outputs:
   - files:
       - lib/libboost_program_options*      [not win]
       - Library\lib\libboost_program_options*  [win]
+      - Library\bin\libboost_program_options*  [win]
     name: libboost_program_options
   - files:
       - include/boost/program_options          [not win]
@@ -333,6 +347,7 @@ outputs:
   - files:
       - lib/libboost_random*     [not win]
       - Library\lib\libboost_random* [win]
+      - Library\bin\libboost_random* [win]
     name: libboost_random
     requirements:
       run:
@@ -357,6 +372,7 @@ outputs:
   - files:
       - lib/libboost_regex*     [not win]
       - Library\lib\libboost_regex* [win]
+      - Library\bin\libboost_regex* [win]
     name: libboost_regex
     requirements:
       run:
@@ -384,7 +400,9 @@ outputs:
       - lib/libboost_serialization*      [not win]
       - lib/libboost_wserialization*     [not win]
       - Library\lib\libboost_serialization*  [win]
+      - Library\bin\libboost_serialization*  [win]
       - Library\lib\libboost_wserialization* [win]
+      - Library\bin\libboost_wserialization* [win]
     name: libboost_serialization
     requirements:
       run:
@@ -406,6 +424,7 @@ outputs:
   - files:
       - lib/libboost_signals*     [not win]
       - Library\lib\libboost_signals* [win]
+      - Library\bin\libboost_signals* [win]
     name: libboost_signals
   - files:
       - include/boost/signals            [not win]
@@ -427,6 +446,7 @@ outputs:
   - files:
       - lib/libboost_system*     [not win]
       - Library\lib\libboost_system* [win]
+      - Library\bin\libboost_system* [win]
     name: libboost_system
   - files:
       - include/boost/system          [not win]
@@ -442,6 +462,7 @@ outputs:
   - files:
       - lib/libboost_thread*     [not win]
       - Library\lib\libboost_thread* [win]
+      - Library\bin\libboost_thread* [win]
     name: libboost_thread
     requirements:
       run:
@@ -471,6 +492,7 @@ outputs:
   - files:
       - lib/libboost_timer*     [not win]
       - Library\lib\libboost_timer* [win]
+      - Library\bin\libboost_timer* [win]
     name: libboost_timer
     requirements:
       run:
@@ -494,6 +516,7 @@ outputs:
   - files:
       - lib/libboost_type_erasure*     [not win]
       - Library\lib\libboost_type_erasure* [win]
+      - Library\bin\libboost_type_erasure* [win]
     name: libboost_type_erasure
     requirements:
       run:
@@ -515,7 +538,9 @@ outputs:
       - lib/libboost_unit_test_framework*      [not win]
       - lib/libboost_prg_exec_monitor*         [not win]
       - Library\lib\libboost_unit_test_framework*  [win]
-      - Library\lib\libboost_prg_exec_monitor* [not win]
+      - Library\bin\libboost_unit_test_framework*  [win]
+      - Library\lib\libboost_prg_exec_monitor*     [win]
+      - Library\bin\libboost_prg_exec_monitor*     [win]
     name: libboost_test
     requirements:
       run:
@@ -537,6 +562,7 @@ outputs:
   - files:
       - lib/libboost_wave*     [not win]
       - Library\lib\libboost_wave* [win]
+      - Library\bin\libboost_wave* [win]
     name: libboost_wave
     requirements:
       run:
