--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,7 @@ image: Visual Studio 2013
 
 platform:
   - x86
-  - x64
+  # - x64
 
 environment:
   matrix:
@@ -56,18 +56,26 @@ environment:
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: bin\conda\python-toolchain
     #   CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\boost-suite
-      CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\boost-suite
+    #   CONDA_VERSION: 2
     - CONDA_RECIPE: bin\conda\boost-suite
       CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\conda-tools\bin\conda\conda-tools
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\conda-tools\bin\conda\conda-tools
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\SoftMaint\bin\conda\python-softmaint
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\SoftMaint\bin\conda\python-softmaint
+    #   CONDA_VERSION: 3
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\llvm
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\clang
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
     #   CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
-      CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
+    #   CONDA_VERSION: 2
     - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
       CONDA_VERSION: 3
     - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
